# airfoil_database

./: .gitignore  README.md  pyproject.toml
airfoil_database/: airfoil_database.db  airfoils.db  selig_airfoils.db
classical_modeling_results/: classical_modeling_summary.json  similarity_search_summary.json  summary.json  table4_classical_results.csv  table4_similarity_results.csv  table4_similarity_search_results.csv
geometric_analysis_results/: classical_modeling_features.csv  table3_feature_summary.csv
my_airfoil_database/: airfoil_data.db
processed_data/: airfoil_names.npy  preparation_summary.json  preparation_summary_with_validation.json  validation_report.json
src/airfoil_database/: __init__.py  database_examples.py  main.py
src/airfoil_database.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/airfoil_database/analysis/: __init__.py  aero_analyzer.py  geometry_analyzer.py
src/airfoil_database/classes/: AirfoilDatabase.py  AirfoilDatabase.txt  AirfoilDatabase_new.py  AirfoilSeries.py  DataAnalysis.py  XFoilRunner - Copy.py  XFoilRunner.py
src/airfoil_database/core/: __init__.py  data_preparation.py  database.py  models.py
src/airfoil_database/dashboard/: airfoil_dashboard.py
src/airfoil_database/gui/: airfoil_gui.py
src/airfoil_database/models/: build_parsimonious_regression_model.py
src/airfoil_database/plotting/: __init__.py  airfoil_plotter.py  auto_select_binning_method.py  data_plotter.py  plot_bar_chart.py  plot_clustered_bar_chart.py  plot_heatmap.py  plot_histogram.py  plot_individual_bar_charts.py  plot_line_chart.py  plot_radar_chart.py  plot_stacked_bar_chart.py  visualize_regression_models.py
src/airfoil_database/preprocessing/: closure.py
src/airfoil_database/scripts/: classical_modeling.py  data_preparation.py  diagnose_data.py  migrate_database.py  neural_network_modeling.py  run_classical_modeling.py  run_geometric_analysis.py  save_preprocessed_data.py  visualize_data_preparation.py
src/airfoil_database/utilities/: __init__.py  get_files_starting_with.py  get_max_workers.py  get_top_level_module.py  helpers.py  parallel_processing.py
src/airfoil_database/xfoil/: __init__.py  batch_runner.py  batch_xfoil_analysis.py  batch_xfoil_analysis_redo.py  batch_xfoil_analysis_smart.py  calculate_distance.py  check_analysis_status.py  fix_airfoil_data.py  fix_airfoil_pointcloud_v2.py  fix_point_cloud.py  fix_point_cloud_simple.py  interpolate_points.py  plotting_data.py  processor.py  resume_analysis.py  runner.py  workflow_manager.py  workflow_manager_sample.py  xfoil_test.py
test/: test_airfoil_series.py  test_compute_LE_radius.py  test_compute_TE_angle.py  test_compute_aspect_ratio.py  test_compute_span.py  test_compute_thickness_camber.py  test_compute_thickness_to_chord_ratio.py  test_xfoil_calc_distance.py  test_xfoil_fix_pointcloud.py  test_xfoil_interp_points_simple.py
(+22 files in other folders)
