[project]
name = "airfoil_database"
version = "0.0.1"
description = "Airfoil Database Code"
authors = [
    {name = "Mitchell Scott", email = "mitchell.scott.7@us.af.mil"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "numpy",
    "ambiance",
    "pandas",
    "scipy",
    "seaborn",
    "plotly",
    "kaleido",
    "requests",
    "beautifulsoup4",
    "selenium",
    "shapely",
    "PyQt6",
    "statsmodels",
    "scikit-learn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "flake8",
    "isort",
    "pylint",
    "autopep8",
    "tox"
]

[build-system]
requires = ["setuptools>=41.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
packages = [
    "airfoil_database",
    "airfoil_database.classes",
    "airfoil_database.formulas",
    "airfoil_database.formulas.airfoil",
    "airfoil_database.formulas.histogram_bins",
    "airfoil_database.formulas.statistics",
    "airfoil_database.plotting",
    "airfoil_database.utilities",
    "airfoil_database.xfoil"
]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(message)s"
log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = "tests"

[FORMAT]
max-line-length = 120

[tool.isort]
line_length = 120
src_paths = [
    "CFD", 
    "tests"
]

[tool.mypy]
mypy_path = "CFD"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.pylint.format]
max-line-length = 120

[tool.pylint.baisc]
argument-rgx = "[a-z_][a-z0-9_]*$"
attr-rgx = "[a-z_][a-z0-9_]*$"
variable-rgx = "[a-z_][a-z0-9_]*$"
good-names = ["x", "y", "z"]
ignore = "__init__.py"

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-boolean-expressions",
    "too-many-branches",
    "too-many-function-args",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-statements",
    "too-few-public-methods",
    "logging-fstring-interpolation"
]

[tool.autopep8]
max_line_length = 120
in_place = true
recursive = true
aggressive = 3
ignore = "dE24, W50, W690, E265"